# runloq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  check_new.py  config.py  core.py  docker-compose.yml  prism.py  pyproject.toml  requirements.txt  seed.py  setup.py
.github/workflows/: a11y.yml  docs.yml  publish.yml  test.yml
dashboard/: README.md  dev.prism.api.plist.template  install.sh  pyproject.toml  uninstall.sh
dashboard/api/: deps.py  main.py  schemas.py  sse.py
dashboard/api/routes/: events.py  health.py  issues.py  meta.py  search.py
dashboard/api/tests/: conftest.py  test_auth.py  test_concurrency.py  test_events.py  test_health.py  test_issues.py  test_meta.py  test_search.py  test_sse.py
dashboard/api/tests/fixtures/: oss_default.config.toml  test_prism.config.toml
dashboard/e2e/: bulk.spec.ts  dnd.spec.ts  happy-path.spec.ts  inline-edit.spec.ts  markdown.spec.ts  package.json  playwright.config.ts
dashboard/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/web/src/: App.tsx  main.tsx
dashboard/web/src/components/: ActionBar.tsx  ActivityTimeline.tsx  BlockedByBadge.tsx  Board.tsx  Card.tsx  Column.tsx  CommentThread.tsx  CreateModal.tsx  IssueIdLink.tsx  Markdown.tsx  ProjectChip.tsx  SavedViewsMenu.tsx  ScheduledBadge.tsx  SearchPalette.tsx  Sidebar.tsx  TicketForm.tsx  TicketModal.tsx  TopBar.tsx
dashboard/web/src/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  input.tsx  markdown-editor.tsx  select.tsx  textarea.tsx  ticket-combobox.tsx
dashboard/web/src/hooks/: useEpicChildren.ts  useEvents.ts  useInverseRelations.ts  useIssue.ts  useIssues.ts  useKeyboard.ts  useMeta.ts  useMutations.ts  useSSE.ts  useSearch.ts
dashboard/web/src/lib/: api.ts  cn.ts  constants.ts  filterUrl.ts  modalStack.ts  savedViews.ts  schemas.ts  selection.ts
dashboard/web/src/styles/: globals.css  tokens.css
dashboard/web/tests/: api.test.ts
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs/public/: llms.txt  robots.txt
docs/src/content/docs/: index.mdx  why.mdx
docs/src/content/docs/docs/: claude-code.mdx  mcp.mdx
docs/src/content/docs/vs/: github-issues.mdx  linear.mdx
integrations/claude-code/: README.md  install.sh  settings.example.json
integrations/claude-code/agents/: engineer.md
integrations/claude-code/hooks/: session-start.sh  user-prompt-submit.sh
integrations/claude-code/rules/: runloq.md
integrations/claude-code/skills/issue/: SKILL.md
integrations/claude-code/skills/work/: SKILL.md
mcp/: README.md  __init__.py  server.py
tests/: conftest.py  test_config.py  test_core.py  test_mcp.py  test_prism.py
